--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-
+GameDefaultMap=/Game/Game/Maps/L_Level.L_Level
+GlobalDefaultGameMode=/Game/Game/Core/BP_GameMode.BP_GameMode_C
+EditorStartupMap=/Game/Game/Maps/L_Level.L_Level
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
