--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Game/Maps/L_Level.L_Level
+GameDefaultMap=/Game/Game/Maps/L_Gameplay.L_Gameplay
 GlobalDefaultGameMode=/Game/Game/Core/BP_GameMode.BP_GameMode_C
-EditorStartupMap=/Game/Game/Maps/L_Level.L_Level
+EditorStartupMap=/Game/Game/Maps/L_Gameplay.L_Gameplay
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
