--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -53,11 +53,11 @@ AdvancedSettings=(UseHeadMountedDisplayAudioDevice=False,MaxSystemAudioObjects=1
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 BuildTarget=
 LaunchOnTarget=
 StagingDirectory=(Path="")
-FullRebuild=False
+FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
@@ -99,9 +99,9 @@ InternationalizationPreset=English
 +CulturesToStage=en
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
-bCookMapsOnly=False
-bSkipEditorContent=False
-bSkipMovies=False
+bCookMapsOnly=True
+bSkipEditorContent=True
+bSkipMovies=True
 -IniKeyBlacklist=KeyStorePassword
 -IniKeyBlacklist=KeyPassword
 -IniKeyBlacklist=rsa.privateexp
@@ -138,10 +138,11 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 -IniSectionBlacklist=HordeStorageServers
 +IniSectionBlacklist=HordeStorageServers
++MapsToCook=(FilePath="/Game/Game/Maps/L_Gameplay")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTree")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTypes")
 +DirectoriesToAlwaysCook=(Path="/Game/WwiseAudio")
-PerPlatformBuildConfig=()
-PerPlatformTargetFlavorName=()
+PerPlatformBuildConfig=(("Windows", PPBC_Shipping))
+PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
 
